[package]
name = "atcoder-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
cookie_store = "0.21.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
ureq = { version = "2.10.1", features = ["json", "cookies"] }
